# uk-eu-tender-radar

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  render.yaml
.github/workflows/: ingest.yml
backend/: .env.example  README.md  db.js  package-lock.json  package.json  pyproject.toml  server.js
backend/alembic/: env.py
backend/alembic/versions/: 8f81000f2f85_baseline_tender_opportunity_tender_cpv.py  a1b2c3d4e5f6_add_buyer_profile_saved_search_tables.py
backend/app/: config.py  db.py  main.py  timeutil.py
backend/app/api/: buyers.py  health.py  opportunities.py  profile.py
backend/app/ingestion/: cpv.py  fts.py  run.py  ted.py
backend/app/ingestion/normalize/: _util.py  eforms.py  enums.py  fx.py  ocds.py
backend/app/jobs/: buyer_resolve.py  buyer_rollup.py
backend/app/models/: __init__.py  buyer.py  profile.py  tender.py
backend/app/schemas/: opportunity.py
backend/app/scoring/: relevance.py  weights.py
backend/tests/: conftest.py  test_api_buyers.py  test_api_opportunities.py  test_api_profile.py  test_buyer_jobs.py  test_edge_cases.py  test_fts_mapper.py  test_fx.py  test_scoring.py  test_smoke.py  test_ted_mapper.py
backend/tests/fixtures/: ted_search.json
docs/: API_CONTRACT.md  DATA_MODEL.md  DEV_PLAN.md  GLOSSARY.md  IMPROVEMENT_PLAN.md  README.md  RESEARCH.md  SPIKE_FINDINGS.md
docs/portfolio/: CASE_STUDY.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/lib/: api.js  (+4 more)
ops/: ingest-cron.sh
spike/fixtures/: fts_release_package.json
(+3 files in other folders)
